[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/UI/MainMenu.tres" type="Theme" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/Menuback.png" type="Texture" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Control" parent="."]
margin_left = 372.0
margin_top = 239.0
margin_right = 601.0
margin_bottom = 697.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Left"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Left/VBoxContainer"]
margin_right = 229.0
margin_bottom = 18.0
text = "welcome"

[node name="USER" type="Button" parent="Left/VBoxContainer"]
margin_top = 22.0
margin_right = 229.0
margin_bottom = 42.0
text = "USER"

[node name="TRACK" type="Button" parent="Left/VBoxContainer"]
margin_top = 46.0
margin_right = 229.0
margin_bottom = 66.0
text = "TRACK"

[node name="OPTIONS" type="Button" parent="Left/VBoxContainer"]
margin_top = 70.0
margin_right = 229.0
margin_bottom = 90.0
text = "OPTIONS"

[node name="QUIT" type="Button" parent="Left/VBoxContainer"]
margin_top = 94.0
margin_right = 229.0
margin_bottom = 114.0
text = "QUIT"

[node name="Right" type="Control" parent="."]
margin_left = 630.0
margin_top = 239.0
margin_right = 1260.0
margin_bottom = 699.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="control-user" type="Control" parent="Right"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Right/control-user"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Right/control-user/VBoxContainer"]
margin_right = 630.0
margin_bottom = 18.0
text = "Login to save laptimes:"

[node name="Login_Create" type="HBoxContainer" parent="Right/control-user/VBoxContainer"]
margin_top = 22.0
margin_right = 630.0
margin_bottom = 42.0
custom_constants/separation = 4

[node name="User" type="LineEdit" parent="Right/control-user/VBoxContainer/Login_Create"]
margin_right = 200.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
placeholder_text = "username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password" type="LineEdit" parent="Right/control-user/VBoxContainer/Login_Create"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
secret = true
placeholder_text = "password"

[node name="Button_Login" type="Button" parent="Right/control-user/VBoxContainer/Login_Create"]
margin_left = 408.0
margin_right = 488.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 0 )
text = "Login"

[node name="Button_Reg" type="Button" parent="Right/control-user/VBoxContainer/Login_Create"]
margin_left = 492.0
margin_right = 612.0
margin_bottom = 20.0
rect_min_size = Vector2( 120, 0 )
text = "Register"

[node name="control-track" type="Control" parent="Right"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Right/control-track"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Right/control-track/VBoxContainer"]
margin_right = 630.0
margin_bottom = 18.0
text = "select track:"

[node name="ItemList" type="ItemList" parent="Right/control-track/VBoxContainer"]
margin_top = 22.0
margin_right = 630.0
margin_bottom = 460.0
rect_min_size = Vector2( 600, 390 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/icon_margin = 20
icon_scale = 0.5

[node name="control-options" type="Control" parent="Right"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Right/control-options"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Right/control-options/VBoxContainer"]
margin_right = 630.0
margin_bottom = 18.0
text = "options:"

[node name="chk_ghost" type="CheckBox" parent="Right/control-options/VBoxContainer"]
margin_top = 22.0
margin_right = 630.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 26 )
text = "best lap ghost"

[node name="chk_trail" type="CheckBox" parent="Right/control-options/VBoxContainer"]
margin_top = 52.0
margin_right = 630.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 26 )
text = "current lap trail"

[node name="chk_best_trail" type="CheckBox" parent="Right/control-options/VBoxContainer"]
margin_top = 82.0
margin_right = 630.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 26 )
text = "best lap trail"

[node name="btn_save" type="Button" parent="Right/control-options/VBoxContainer"]
margin_top = 112.0
margin_right = 630.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 26 )
text = "Save"
[connection signal="pressed" from="Left/VBoxContainer/USER" to="." method="_on_USER_pressed"]
[connection signal="pressed" from="Left/VBoxContainer/TRACK" to="." method="_on_TRACK_pressed"]
[connection signal="pressed" from="Left/VBoxContainer/OPTIONS" to="." method="_on_OPTIONS_pressed"]
[connection signal="pressed" from="Left/VBoxContainer/QUIT" to="." method="_on_QUIT_pressed"]
[connection signal="text_entered" from="Right/control-user/VBoxContainer/Login_Create/Password" to="." method="_on_Password_text_entered"]
[connection signal="pressed" from="Right/control-user/VBoxContainer/Login_Create/Button_Login" to="." method="_on_Button_Login_pressed"]
[connection signal="pressed" from="Right/control-user/VBoxContainer/Login_Create/Button_Reg" to="." method="_on_Button_Login_pressed"]
[connection signal="item_activated" from="Right/control-track/VBoxContainer/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="pressed" from="Right/control-options/VBoxContainer/btn_save" to="." method="_on_btn_save_pressed"]
